# Natural-Language-Processing-114-1-NTHU-CS

./: README.md
Assignment2_Math_LSTM/: .gitignore  README.md  main.ipynb  pyproject.toml  requirements.txt
Assignment3_MultiOutput_Learning/: main.ipynb
Assignment_1_Word_Analogy/: .gitignore  NLP_HW1_NTU_r12631070.ipynb  README.md
